--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -14,7 +14,7 @@
 <!-- Minions gift from: https://giphy.com/gifs/aVGQQO1rfq5c4 -->
 
 
-    <title>Banana!</title>
+    <title> Hello Banana!</title>
   </head>
   <body>
     <header class="header--container">
