--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- Minions gift from: https://giphy.com/gifs/aVGQQO1rfq5c4 -->
 
 
-    <title> Hello Banana!</title>
+    <title>Team Banana!</title>
   </head>
   <body>
     <header class="header--container">
